# Project1---Ironhack

./: .gitignore  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Untitled1-checkpoint.ipynb
.virtual_documents/: Untitled1.ipynb
data/raw/: .Olympic_Athlete_Bio.csv.icloud  .Olympic_Athlete_Event_Results.csv.icloud  WBD_GDP_DF.csv
notebooks/: GDP.ipynb  Untitled.ipynb  mailys20_08.ipynb
notebooks/.ipynb_checkpoints/: GDP-checkpoint.ipynb
notebooks/Amir/: Aolym201.ipynb  Hostinfo.ipynb  Untitled.ipynb
notebooks/Mailys/: Analysis participation.ipynb
notebooks/Marco/: Analysis_Marco.ipynb  df_countries.ipynb  df_demographics.ipynb  df_olympic_countries_Aug20.csv
notebooks/Marco/.ipynb_checkpoints/: df_demographics-checkpoint.ipynb
notebooks/Sasha/: GDPpc_Pop_Medals_df.csv  NEW_GDPpc_Pop_Medals_df.csv
slides/: Module 1 Project_ Behind the Glory.pptx
src/project1_ironhack/: __init__.py
